--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,15 +10,19 @@
 
 #logo {
     width: 35%;
+    margin-bottom: 0.8em;
+    margin-top: 1em;
 }
 
 #subscribeButton {
     border: 2px solid black;
+    background-color:#ffd105;
 }
 
-.zipCodeDiv {
-    margin: 1% 20% auto;
-}
+
+/* .card > #allDealsButton{
+    padding: 0.32em;
+} */
 
 #locationWord {
     font-family: 'Comfortaa', cursive;
@@ -36,23 +40,23 @@
     font-size: 1.1em;
 }
 
+
 .form-control {
     border: white;
-    border-left: 1px solid #85b500;
+    border-left: 2px solid #85b500;
+    border-right: 2px solid #85b500;
     font-size: 1em;
+    margin: 2% 23% auto;
+
 }
 
-#allDealsButton {
-    border: 4px dashed black;
-    background-color: white;
-    color: #85b500;
-    font-family: 'Comfortaa', cursive;
-    font-size: 1.2em;
-}
 
+.btn-warning{
+    background-color: rgb(222, 236, 187, 0.7);
+}
 h3 {
     font-family: 'Monofett', cursive;
-    font-size: 2.1em;
+    font-size: 2.3em;
     background-color: rgb(222, 236, 187, 0.6);
     border: none;
     color: black;
@@ -73,8 +77,9 @@ h3 {
     /* border:1px solid white; */
     border: none;
     border-radius: 1em;
-    padding: 2.4em;
+    padding: 0.5em;
     background-color: transparent;
+    margin-top: 0.6em;
 }
 
 .card-deck {
@@ -83,6 +88,8 @@ h3 {
     border-radius: 0;
     background-color: rgba(255, 232, 0, 0.25);
     margin: 0 auto;
+    padding-bottom: 1.5em;
+    padding-top: 0.2em;
 }
 
 #quickSelection {
@@ -96,7 +103,7 @@ h3 {
 }
 
 #imgHover {
-    background-color: rgb(222, 236, 187, 0.6);
+    background-color: rgb(222, 236, 187, 0.7);
 }
 
 .btn-warning:focus {
