--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@
 #logo {
     width: 35%;
     margin-bottom: 0.8em;
-    margin-top: 1em;
+    margin-top: 2em;
 }
 
 #subscribeButton {
@@ -71,6 +71,7 @@ h3 {
     border: 3px solid white;
     border-radius: 1.8em;
     box-shadow: 10px 15px 10px;
+   
 }
 
 .card {
@@ -86,7 +87,7 @@ h3 {
     border: 2px solid white;
     border-bottom: none;
     border-radius: 0;
-    background-color: rgba(255, 232, 0, 0.25);
+    background-color: rgba(0,0,0,.075);
     margin: 0 auto;
     padding-bottom: 1.5em;
     padding-top: 0.2em;
